err/pynav.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pynav'...
Compiling './lib/python3.5/site-packages/pynav/ClientForm.py'...
***   File "./lib/python3.5/site-packages/pynav/ClientForm.py", line 291
    nonce = "".join([str(random.randint(0, sys.maxint-1)) for i in 0,1,2])
                                                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pynav/browser.py'...
***   File "./lib/python3.5/site-packages/pynav/browser.py", line 84
    print 'temps_min: {self.temps_min}, temps_max: {self.temps_max}'.format(self=self)
                                                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pynav/formdumper.py'...
***   File "./lib/python3.5/site-packages/pynav/formdumper.py", line 103
    print text
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pynav/pynav.py'...
***   File "./lib/python3.5/site-packages/pynav/pynav.py", line 123
    print "ERROR: file", file_name, "doesn't exist"
                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pynav/response.py'...
***   File "./lib/python3.5/site-packages/pynav/response.py", line 67
    print "Content-Type {content_type} is not allowed !".format(content_type=self.content_type)
                                                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pynav-0.7.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
